default number has no effect if history is already saved for a
particular entry.
[] Change Find processing in Tree view so that entries are shown in Tree
order rather than List order.
[] Change Find to stop on the last found item and ask whether to continue
from the beginning of the database or the user may select this previous
behavour via a Misc. option.

Changes to Existing Features in 3.03
====================================
[1532368] increase password history - now maximum is limited by
corresponding field in the database - i.e. 1 byte = 255.
[] Prevent change of view (List <-> Tree) during Find operation as the order
of found entries differ in these views.
[] User is again offered the option of accepting weak passphrases, if a
Security Option is set.

Bugs fixed in 3.03
==================
[1527029] Password count not visible in status bar.
[1529305] Crash in Password History
[1528400] Cancel on "Restore from Backup" causes corrupt database
[] View Menu item "Collapse All" did not collapse all embedded groups
[] DoubleClick did not work on entries with expired passwords
[] Fix long standing memory leak in Find processing
[] Ensure all dialog validation entries are processed
[] Fix coding typo in code setting persistent boolean preferences
[] ExpandAll and CollapseAll must be disabled if no entries in Tree

New Features for 3.02
=====================
[] Export/import to/from XML supported.
[] Selective text export.
[705515,1120236,1487001] Password history can now be saved for selected
entries.
[1516674] Ability to hide password during Add & Edit entry. If hidden,
password needs to be entered twice to verify.
[1506320] Count of passwords stored in DB on status bar. Also indication
of read/only status.
[] Compare of two databases supported

Changes to Existing Features in 3.02
====================================
[] Minimum master passphrase length is now 8 characters, and user is
not offered the option of accepting weak passphrases.